--- a/src/templete.html
+++ b/src/templete.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
-<body id="wrapper-container"
+<body id="wrapper-container">
 
 </body>
 </html>
